--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
   "name": "aman-bot",
   "version": "1.0.0",
-  "description": "Facebook Messenger Aman Bot using ws3-fca and Express",
+  "description": "Facebook Messenger automation bot using @dongdev/fca-unofficial",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js"
+  },
+  "author": "Aahan",
+  "license": "MIT",
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "ws3-fca": "^1.0.0",
-    "socket.io": "^4.7.1",
-    "npmlog": "^6.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.0"
-  },
-  "author": "Aman inxide",
-  "license": "MIT"
-}  
+    "@dongdev/fca-unofficial": "git+https://github.com/dongdevpro/fca-unofficial.git",
+    "body-parser": "^1.20.3",
+    "express": "^4.21.1",
+    "socket.io": "^4.8.1"
+  }
+}
